style.css
:root {
    --bg: black;
    --lightWhite: #d9d9d9
}

html, body {
    font-size: 16px;
    color: white;
    background-color: var(--bg);
    font-family: "Antonio", sans-serif;
    font-optical-sizing: auto;
    font-weight: 700;
    font-style: normal;
    max-width: 768px;
    margin: 0 auto;
}

.patrick-hand-regular {
    font-family: "Patrick Hand", cursive;
    font-weight: 400;
    font-style: normal;
}

.description {
    font-size: 12px;
    color: var(--lightWhite);
}

nav {
    width: 100%;
    position: sticky;
    top: 0;
    height: 100px;
    background-color: var(--bg);
    display: flex;
    justify-content: center;
    align-items: center;
    z-index: 5;
}

footer {
    background-color: var(--bg);
    height: 30px;
}

ul li {
    list-style: none;
    margin-top: 15px;
}

li:nth-child(1) {
    margin-top: 0;
}

ul {
    gap: 20px;
}

.wrapper {
    display: flex;
    flex-direction: column;
    min-height: 100vh;
    background-color: #212121;
    padding: 20px 10px;
}

.menu_section {
    display: flex;
    flex-direction: column;
    min-height: 200px;
}

.section_label_wrapper {
    position: relative;
    border-bottom: white 1px solid;
    border-top: white 1px solid;
    margin: 20px 0;
}

.section_label {
    padding: 5px 10px;
    font-size: 32px;
    text-transform: uppercase;
    letter-spacing: 1px;

}

.section_label::before {
    content: "";
    position: absolute;
    width: 80%;
    height: 1px;
    top: -6px;
    left: 10%;
    background-color: white;
}

.section_label::after {
    content: "";
    position: absolute;
    width: 80%;
    height: 1px;
    bottom: -6px;
    left: 10%;
    background-color: white;
}

.sub_section_divider {
    margin-top: 15px;
    margin-left: 10px;
    font-size: 20px;
}

.section_content {
    width: 90%;
    height: 100%;
    margin: 5px auto;
    padding: 0 6px;
}

.side_strip {
    border-left: white 1px solid;
    padding: 5px 6px;
}

.section_item_header {
    margin-right: 30px;
    display: flex;
    justify-content: space-between;
}

